--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* A simple, css only, (some-what) responsive menu */
+
 
 body { 
   background: #ccc;
   font-family: 'Quicksand', arial, serif; /*change fonts*/
-  font-size: 13px;
+  font-size: 16px;
   text-transform: uppercase;
   text-align: center;
 }
@@ -16,7 +16,7 @@ body {
   margin-top: 40px;
 }
 
-/* a little "umph" */
+/* background navbar*/
 .decor {
   background: #6EAF8D;
   background: -webkit-linear-gradient(left, #CDEBDB 50%, #6EAF8D 50%);
@@ -28,11 +28,16 @@ body {
   display: block;
 }
 
+/* links color */
+
 a {
   text-decoration: none;
   color: #fff;
   display: block;
 }
+
+/* delete the subline*/
+
 
 ul {
   list-style: none;
@@ -44,7 +49,7 @@ li {
   float: left;
 }
 
-/* clear'n floats */
+/* clear floats */
 ul:after {
   clear: both;
 }
@@ -156,7 +161,7 @@ a {
 }
 
 a:hover {
-	text-decoration: underline; /* souligner les liens au passage souris */
+	text-decoration: underline; /* subline hover */
 }
 
 
@@ -220,7 +225,7 @@ h1 a, h2 a, {
     display: block;  
     position: static;
     box-shadow: none;
-    width: 100%;
+    width: 70%;
   }
   
   ul.sub li a {
