Responsive + font size +com

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ ul.primary li:hover ul {
   background: #fff;
 }
 
-/* keeps the tab background white */
+
 ul.primary li:hover a {
   background: #fff;
   color: #666;
@@ -191,7 +191,7 @@ h1 a, h2 a, {
 
 
 
-
+/*Responsive*/
 
 
 
